--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My test page</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-    </head>
-    <body>
-        <h1>Привет, меня зовут Кирилл</h1>
-        <img src="Я.jpg" width="800" height="500">
-        <p>Немного о себе</p>
-        <ul>
-            <li>Мне 18 лет</li>
-            <li>Я битмейкер</li>
-            <li>Спортсмен</li>
-            <li>Учусь на 1 курсе психологического факультета</li>
-        </ul>
-        <a href="https://vk.com/kimerondabeat">Мой ВК</a>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>My test page</title>
+  </head>
+  <body>
+    <h1>Привет, меня зовут Кирилл</h1>
+    <img src="Я.jpg" width="700" height="400" alt="Моя фотография" />
+    <h2>Немного о себе</h2>
+    <hr />
+    <ul>
+      <li>Мне 18 лет</li>
+      <li>Я битмейкер</li>
+      <li>Спортсмен</li>
+      <li>Учусь на 1 курсе психологического факультета</li>
+    </ul>
+    <h3>Мои социальные сети</h3>
+    <ol>
+      <li><a href="https://vk.com/kimerondabeat" target="_blank">VK</a></li>
+      <li>
+        <a
+          href="https://vk.com/away.php?utf=1&to=https%3A%2F%2Finstagram.com%2Fdeadoveeeeee%3Figshid%3DYmMyMTA2M2Y%3D"
+          target="_blank"
+          >Instagram</a
+        >
+      </li>
+    </ol>
+  </body>
 </html>
