--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>My test page</title>
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <h1>Привет, меня зовут Кирилл</h1>
-    <img src="Я.jpg" width="700" height="400" alt="Моя фотография" />
+    <img src="Я2.jpg" alt="Моя фотография" class="avatar" />
     <h2>Немного о себе</h2>
     <hr />
     <ul>
@@ -26,5 +27,13 @@
         >
       </li>
     </ol>
+    <hr />
+    <h4>Связаться со мной</h4>
+    <form>
+      <label for="email">Ваш Email:</label>
+      <input type="email" id="email" placeholder="email" />
+    </form>
+    <button>Связаться!</button>
   </body>
 </html>
+
