--- a/index.html
+++ b/index.html
@@ -6,34 +6,43 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Привет, меня зовут Кирилл</h1>
-    <img src="Я2.jpg" alt="Моя фотография" class="avatar" />
-    <h2>Немного о себе</h2>
-    <hr />
-    <ul>
-      <li>Мне 18 лет</li>
-      <li>Я битмейкер</li>
-      <li>Спортсмен</li>
-      <li>Учусь на 1 курсе психологического факультета</li>
-    </ul>
-    <h3>Мои социальные сети</h3>
-    <ol>
-      <li><a href="https://vk.com/kimerondabeat" target="_blank">VK</a></li>
-      <li>
-        <a
-          href="https://vk.com/away.php?utf=1&to=https%3A%2F%2Finstagram.com%2Fdeadoveeeeee%3Figshid%3DYmMyMTA2M2Y%3D"
-          target="_blank"
-          >Instagram</a
-        >
-      </li>
-    </ol>
-    <hr />
-    <h4>Связаться со мной</h4>
-    <form>
-      <label for="email">Ваш Email:</label>
-      <input type="email" id="email" placeholder="email" />
-    </form>
-    <button>Связаться!</button>
+    <div class="container">
+      <h1>Привет, меня зовут Кирилл</h1>
+      <img src="Я2.jpg" alt="Моя фотография" class="avatar" />
+      <div class="about">
+        <h2>Немного о себе</h2>
+        <ul>
+          <li>Мне 18 лет</li>
+          <li>Я битмейкер</li>
+          <li>Спортсмен</li>
+          <li>Учусь на 1 курсе психологического факультета</li>
+        </ul>
+      </div>
+      <hr />
+      <div class="social">
+        <h3>Мои социальные сети</h3>
+        <ol>
+          <li><a href="https://vk.com/kimerondabeat" target="_blank">VK</a></li>
+          <li>
+            <a
+              href="https://vk.com/away.php?utf=1&to=https%3A%2F%2Finstagram.com%2Fdeadoveeeeee%3Figshid%3DYmMyMTA2M2Y%3D"
+              target="_blank"
+              >Instagram</a
+            >
+          </li>
+        </ol>
+      </div>
+      <hr />
+      <div class="form">
+        <h4>Связаться со мной</h4>
+        <form>
+          <label for="email">Ваш Email:</label>
+          <input type="email" id="email" placeholder="email" />
+        </form>
+        <button>Связаться!</button>
+      </div>
+    </div>
   </body>
 </html>
+
 
